# integra-gov

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: uso-basico.md
docs/superpowers/specs/: 2026-07-07-marcador-controle-prazo-design.md
examples/: README.md  exemplo_abrir_processo.py  exemplo_assinar_documento.py  exemplo_incluir_documento_externo.py  exemplo_incluir_documento_interno.py  exemplo_iniciar_processo.py  exemplo_preencher_modelo.py
integra/: __init__.py
integra/sei/: __init__.py  documentos_arvore.py  editar_conteudo.py  exceptions.py  incluir_documento_interno.py  iniciar_processo.py  inserir_documento_externo.py  login.py  navegador.py  nivel_acesso.py  processo.py
integra/siape/: __init__.py  _dependencias.py  _menu.py  acesso_web.py  conexao.py  controle.py  exceptions.py  habilitacao.py  lancador.py
integra_gov/: __init__.py
integra_gov/sei/: __init__.py  assinar_documento.py  barra_icones.py  concluir_processo.py  controle_prazo.py  documentos_arvore.py  download_documento.py  editar_conteudo.py  enviar_processo.py  exceptions.py  gerar_documento.py  iframes.py  incluir_documento_bloco.py  incluir_documento_interno.py  iniciar_processo.py  inserir_documento_externo.py  login.py  marcador.py  navegador.py  processo.py  selecao_unidade.py  tela_aviso.py
integra_gov/siape/: __init__.py  _menu.py  acesso_web.py  conexao.py  controle.py  exceptions.py  habilitacao.py  lancador.py
tests/: conftest.py  test_concluir_processo.py  test_controle_prazo.py  test_documentos_arvore.py  test_download_documento.py  test_editar_conteudo.py  test_enviar_processo.py  test_iframes.py  test_incluir_documento_bloco.py  test_iniciar_processo.py  test_login.py  test_marcador.py  test_navegador.py  test_nivel_acesso.py  test_processo.py  test_selecao_unidade.py  test_siape_acesso_web.py  test_siape_conexao.py  test_siape_controle.py  test_siape_habilitacao.py  test_siape_lancador.py  test_smoke.py  test_tela_aviso.py
