[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Nome de DISTRIBUIÇÃO. O repositório no GitHub será "integra-gov".
# "integra" provavelmente está ocupado no PyPI; ao publicar lá, troque para
# "integra-gov" — isso NÃO muda os imports, que continuam `import integra`.
name = "integra"
version = "0.0.1"
description = "Automação de sistemas do governo federal brasileiro (a começar pelo SEI), para ajudar servidores públicos."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Marco Aurélio da Silva" }]
keywords = ["sei", "governo", "automação", "selenium", "administração pública", "rpa"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: Portuguese (Brazilian)",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "Topic :: Office/Business",
]
dependencies = [
    "selenium>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "ruff>=0.1",
]
# SIAPE (terminal 3270): automatiza um emulador IBM HOD via pywinauto.
# Somente Windows — o marcador evita tentar instalar pywinauto no Linux/CI.
siape = [
    "pywinauto>=0.6; platform_system == 'Windows'",
]

[project.urls]
Homepage = "https://github.com/MarcoAShanon/integra-gov"
Issues = "https://github.com/MarcoAShanon/integra-gov/issues"

[tool.setuptools.packages.find]
include = ["integra*"]

[tool.setuptools.package-data]
integra = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
