[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Nome de DISTRIBUIÇÃO (PyPI) e de IMPORTAÇÃO alinhados: instala-se com
# `pip install integra-gov` e importa-se com `import integra_gov`. O namespace
# `integra_gov` evita colisão com o pacote interno `integra` (privado), o que
# permite este pacote ser consumido como dependência dele.
name = "integra-gov"
version = "0.0.1"
description = "Automação de sistemas do governo federal brasileiro (a começar pelo SEI), para ajudar servidores públicos."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Marco Aurélio da Silva" }]
keywords = ["sei", "governo", "automação", "selenium", "administração pública", "rpa"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: Portuguese (Brazilian)",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "Topic :: Office/Business",
]
dependencies = [
    "selenium>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "ruff>=0.1",
]
# SIAPE (terminal 3270): automatiza um emulador IBM HOD via pywinauto.
# Somente Windows — o marcador evita tentar instalar pywinauto no Linux/CI.
siape = [
    "pywinauto>=0.6; platform_system == 'Windows'",
]

[project.urls]
Homepage = "https://github.com/MarcoAShanon/integra-gov"
Issues = "https://github.com/MarcoAShanon/integra-gov/issues"

[tool.setuptools.packages.find]
include = ["integra_gov*"]

[tool.setuptools.package-data]
integra_gov = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
